requirements.txt: correct pkg deps to eliminate boto hard version requirement used during testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,5 @@
-boto3==1.7.70
-botocore==1.10.70
-certifi==2018.4.16
-chardet==3.0.4
-colorama==0.3.9
-docutils==0.14
-jmespath==0.9.3
-pkginfo==1.4.2
-pyaws==0.1.18
-Pygments==2.2.0
-python-dateutil==2.7.3
-PyYAML==3.13
-s3transfer==0.1.13
-six==1.11.0
+boto3<=1.7.10
+botocore<=1.10.10
+pyaws<=0.1.18
+Pygments<=2.2.0
 twine==1.11.0
