--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@
 include README.md
 include DESCRIPTION.rst
 include LICENSE
+include LICENSE.md
 recursive-include ec2tools *
 
 # exclude
@@ -11,3 +12,4 @@ exclude pytest.ini
 recursive-exclude .git *
 recursive-exclude *.egg-info *
 recursive-exclude tests *
+recursive-exclude docs *
